[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"

[dev-dependencies]
reqwest = "0.12"

[dependencies]
config = "0.11"
actix-web = "4.11.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
