[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"

[dev-dependencies]
reqwest = "0.12"
once_cell = "1"

[dependencies]
config = "0.11"
actix-web = "4.11.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "3"
secrecy = { version = "0.8", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4"] }
chrono = "0.4.15"
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
