[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"

[dev-dependencies]
once_cell = "1"
quickcheck_macros = "0.9.1"
quickcheck = "0.9.2"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"

[dependencies]
config = "0.11"
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
wiremock = "0.5"
unicode-segmentation = "1"
validator = "0.14"
claim = "0.5"
fake="~2.3"
actix-web = "4.11.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "3"
secrecy = { version = "0.8", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4"] }
chrono = "0.4.15"
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
